--- a/schwerpunkte.html
+++ b/schwerpunkte.html
@@ -124,8 +124,41 @@
     </div>
     <div class="bg-light mr-md-3 pt-3 px-3 pt-md-4 px-md-5 col-md-6 text-center overflow-hidden" id="informationen">
         <div class="mb-3 pb-3">
-            <h1 class="display-5  mb-4">Informationen</h1>
-            <p class="lead">Hier werden in Kürze nützliche Informationen über verschiedene Störungen bereitstehen.
+            <h1 class="display-5  mb-4">Informationen/FAQ</h1>
+            <p class="lead">
+                    <b>Wie arbeiten Logopäden genau?</b> <br />
+                    Die Arbeit eines Logopäden beginnt zumeist nach ärztlicher Zuweisung. 
+                    Nach einem Erstgespräch und einer Diagnostikerhebung kann eine störungsangepasste, 
+                    individuelle Therapie erfolgen. Je nach Störungsbild und Alter des Betroffenen 
+                    unterscheidet sich die Therapie natürlich stark. <br />
+                    Im Unterschied zu Sprachheilpädagogen oder Stimm- und Sprechtrainern, versucht ein Logopäde 
+                    nicht nur die Symptome zu behandeln, sondern die Ursache zu erkennen und zu beseitigen.
+                    <br/><br />
+                    <b>Ab wann ist eine logopädische Therapie notwendig?</b><br />
+                    Vom Alter her kann man hier keine genaue Aussage treffen. Beispielsweise benötigen auch wenige Wochen alte Säuglinge zum Teil eine logopädische Therapie (Fütterstörungen).
+                    Im Bereich der Sprachtherapie bei Kindern gilt: Je früher eine Verzögerung oder eine Störung der Sprachlichen Entwicklung entdeckt und therapiert wird desto schneller kann das Kind den Rückstand aufholen. 
+                    Bei erwachsenen Patienten hängt die Notwendigkeit der Therapie auch oft davon ab, ob der Betroffene etwas ändern möchte oder nicht. 
+                    <br/><br />
+                    <b>Logopädie für Erwachsene: Was wird gemacht?</b><br />
+                    Im Bereich der Erwachsenen Therapie stehen einerseits Menschen mit stimmlichen Beschwerden und andererseits Menschen mit neurologischen Erkrankungen im Vordergrund. Auch hier orientiert sich die Therapie am individuellen Störungsbild. Bei Aussprache-, Schluck oder muskulären Problemen kommt es beispielsweise zum Muskelaufbautraining. Bei Patienten mit sprachlichen Defiziten (z.B. Erfassen sprachlicher Inhalte…) ist es umso wichtiger, den Betroffenen genau an der Stelle abzuholen, an der er steht.
+                    <br/><br />
+                    <b>Wie lange dauert die logopädische Behandlung?</b><br />
+                    Zu dieser Frage kann leider keine pauschale Aussage getroffen werden. Die Anzahl der benötigten Einheiten schwankt je nach Patienten und Störungsbild stark. Selbst wenn zwei Personen exakt dieselben Symptome zeigen, kann die Anzahl der benötigten Einheiten stark voneinander abweichen. Verschrieben werden allerdings meistens 7 – 10 Einheiten, danach muss eine erneute Zuweisung eines Arztes erfolgen.
+                    <br/><br />
+                    <b>Logopädie bei Kindern: Wie läuft das ab?</b><br />
+                    Wie auch im Erwachsenenbereich unterscheidet sich die Therapie je nach Störungsbild. Aber auch in diesem Bereich kann sowohl am Muskelaufbau als auch an den höheren sprachlichen Funktionen (z.B. Erfassen und Umsetzen sprachlicher Inhalte) gearbeitet werden. Je nach Alter des Kindes muss die Therapie mehr oder weniger spielerisch erfolgen.
+                    Wichtig ist es, auch zu bedenken, dass es im Kinderbereich zumeist darum geht, neue Inhalte zu vermitteln. Gerade im neurologischen Bereich geht es vielmehr darum, bereits erlernte Inhalte wieder neu zu entdecken.
+                    <br/><br />
+                    <b>Wie teuer ist die Therapie?</b><br />
+                    Allgemein orientieren sich die Preise für eine Therapie am vorgeschlagenen Stundensatz des Berufsverbandes Logopaedieaustria (Stand Juli 2019: 87,09/Stunde). 
+                    Meine Tarife finden Sie <a href="./tarife.html">hier</a>.
+                    <br/><br />
+                    <b>Wer übernimmt die Therapiekosten?</b><br />
+                    In der Steiermark gibt es im freiberuflichen Bereich nur Wahllogopäden. Das bedeutet, dass je nach Krankenkasse ca. die Hälfte des anfallenden Betrags von der Krankenkasse übernommen wird. Der Restbetrag muss selbst übernommen werden.
+                    <br/><br />
+                    <b>Wer verordnet Logopädie?</b><br />
+                    Verordnet wird die Therapie entweder vom Hausarzt oder vom jeweiligen Facharzt (Kinderarzt, Neurologe, HNO-Arzt…). Die Bewilligung der Therapie erfolgt durch die Krankenkasse (beim Arzt nachfragen).
+                    <br/><br />
             </p>
             <br />
             <section id="buchstaben">
