--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="col-md-3" id="rightheader">
         <section id="iconright">
             <a href="./index.html">
-                <img src="img/logoorangeborder.png" alt="logo icon right">
+                <img src="img/logoorangeborder.png" alt="Logopädie Graz">
             </a>
         </section>
     </div>
@@ -68,6 +68,8 @@
                 Ziel von LOGO on TOUR ist es, Ihnen und Ihren Lieben eine kompetente logopädische Therapie 
                     zu ermöglichen. Diese kann in den logopädischen Praxisräumen, aber auch in den eigenen vier 
                     Wänden erfolgen.
+                    <a href="./uebermich.html" id="uebermichlink">Hier</a>
+                    können Sie Näheres zu mir erfahren.
             </p>
             <h2 class="display-5 mb-4 mt-5">Logopädie für Kinder und Erwachsene</h2>
             <p class="lead">
@@ -88,7 +90,7 @@
             <br />      
             <br />
             <section id="logologo">
-                <img src="img/logologo.jpg" alt="logo logo on tour">
+                <img src="img/logologo.jpg" alt="Logopäde Hausbesuch Graz">
             </section>
         </div>
     </div>
@@ -106,6 +108,26 @@
                 Sprachentwicklungsstörungen im Kindesalter, bis hin zu
                 Stimmstörungen im Erwachsenenalter und der Arbeit
                 mit Klienten mit neurologischen Störungen.
+            </p>
+            <p class="lead">
+                In meinen logopädischen Praxen in Graz und Bruck/Mur
+                versuche ich eine möglichst vielfältige Therapie anzubieten.
+                Nähere Informationen zu meinen Tätigkeitsbereichen, und Antworten zu häufig
+                gestellten Fragen der Patienten erhalten Sie 
+                <a href="./schwerpunkte.html">hier</a>.
+            </p>
+            <p class="lead">
+                Sollten Sie Bedarf an einer logopädischen Therapie in Graz, Bruck/Mur oder
+                Hausbesuchen in der Umgebung haben, können Sie mich gerne
+                <a href="./kontakt.html">hier</a>
+                kontaktieren.
+            </p>
+            <p class="lead">
+                Informationen bezüglich Therapiekosten und Terminvereinbarung finden Sie
+                <a href="./tarife.html">hier</a>.
+            </p>
+            <p class="lead">
+                Ich freue mich schon auf unsere Zusammenarbeit!
             </p>
             <br />
             <section id="kommunikation">
