--- a/schwerpunkte.html
+++ b/schwerpunkte.html
@@ -19,7 +19,7 @@
     <div class="col-md-3" id="rightheader">
         <section id="iconright">
             <a href="./index.html">
-                <img src="img/logoorangeborder.png" alt="logo icon right">
+                <img src="img/logoorangeborder.png" alt="Logopädie Graz">
             </a>
         </section>
     </div>
@@ -118,7 +118,7 @@
             </p>
             <br />
             <section id="sprachverstaendnis">
-                <img src="img/sprachverstaendnis.jpg" alt="sprachverstaendnis">
+                <img src="img/sprachverstaendnis.jpg" alt="Sprachtherapie">
             </section>
         </div>
     </div>
@@ -162,7 +162,7 @@
             </p>
             <br />
             <section id="buchstaben">
-                <img src="img/buchstaben.jpg" alt="buchstaben">
+                <img src="img/buchstaben.jpg" alt="Sprechtherapie">
             </section>
         </div>
     </div>
