--- a/uebermich.html
+++ b/uebermich.html
@@ -19,7 +19,7 @@
     <div class="col-md-3" id="rightheader">
         <section id="iconright">
             <a href="./index.html">
-                <img src="img/logoorangeborder.png" alt="logo icon right">
+                <img src="img/logoorangeborder.png" alt="Logopädie Graz">
             </a>
         </section>
     </div>
@@ -72,11 +72,21 @@
                 Logopädin an der Fachhochschule Kärnten in
                 Klagenfurt abgeschlossen.
                 Seit September 2017 arbeite ich im neurologischen
-                Therapiezentrum Kapfenberg als Logopädin.</p>
-                <br>
+                Therapiezentrum Kapfenberg als Logopädin.
+            </p>
+            <br />
+            <p class="lead">
+                Die 
+                <a href="./kontakt.html" id="kontaktlink">mobile logopädische Praxis in Graz</a>
+                betreibe ich seit April 2019.
+                Mein Antrieb zur Gründung eines mobilen logopädischen Dienstes war 
+                es, auch immobilen Personen einen Zugang zur Logopädie zu ermöglichen.
+            </p>
+            <br />
+                
         </div>
         <section id="profil">
-            <img src="img/helena_bild.jpg" alt="profil-bild">
+            <img src="img/helena_bild.jpg" alt="Logopäde Graz">
         </section>
     </div>
     <div class="bg-light mr-md-3 pt-3 px-3 pt-md-4 px-md-5 col-md-6 text-center overflow-hidden" id="fortbildungen">
