--- a/tarife.html
+++ b/tarife.html
@@ -19,7 +19,7 @@
     <div class="col-md-3" id="rightheader">
         <section id="iconright">
             <a href="./index.html">
-                <img src="img/logoorangeborder.png" alt="logo icon right">
+                <img src="img/logoorangeborder.png" alt="Logopädie Graz">
             </a>
         </section>
     </div>
