--- a/kontakt.html
+++ b/kontakt.html
@@ -19,7 +19,7 @@
     <div class="col-md-3" id="rightheader">
         <section id="iconright">
             <a href="./index.html">
-                <img src="img/logoorangeborder.png" alt="logo icon right">
+                <img src="img/logoorangeborder.png" alt="Logopädie Graz">
             </a>
         </section>
     </div>
@@ -62,17 +62,29 @@
         <div class="mb-3 pb-3">
             <h1 class="display-5 mb-4">Kontakt</h1>
             <ul class="lead">
-                <li>Mail: logopaedie.pernul@gmail.com</li>
                 <li>Tel.: 0660/4867242</li>
+                <li>Mail: logopaedie.pernul@gmail.com</li>
+            </ul>
+            <br />
+            <p class="lead">
+                Sie erreichen meine logopädische Praxis in Graz unter der Adresse:
+            </p>
+            <ul class="lead">
                 <li>Adresse Graz: Primärversorgungszentrum Medius <br>
                     Leonhardplatz 3, 1. Stock <br>
                     8010 Graz</li>
-                <li>Adresse Bruck/Mur: Wird im Oktober bekanntgegeben</li>
             </ul>
             <br />
             <section id="mediuspraxis">
-                <img src="img/mediuspraxis.jpg" alt="mediuspraxis">
+                <img src="img/mediuspraxis.jpg" alt="mobile logopädische Praxis Graz">
             </section>
+            <br />
+            <p class="lead">Die Adresse für die logopädische Praxis in Bruck/Mur wird im Oktober bekanntgegeben.</p>
+            <br />
+            <p class="lead">Ich freue mich auf Ihre Kontaktaufnahme!</p>
+            <p class="lead">Ihre mobile logopädische Praxis in Graz und Bruck/Mur</p>
+
+           
         </div>
     </div>
     <div class="bg-light mr-md-3 pt-3 px-3 pt-md-4 px-md-5 col-md-6 text-center overflow-hidden" id="maps">
