über mich statt zu mir

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     zu ermöglichen. Diese kann in den logopädischen Praxisräumen, aber auch in den eigenen vier 
                     Wänden erfolgen.
                     <a href="./uebermich.html" id="uebermichlink">Hier</a>
-                    können Sie Näheres zu mir erfahren.
+                    können Sie Näheres über mich erfahren.
             </p>
             <h2 class="display-5 mb-4 mt-5">Logopädie für Kinder und Erwachsene</h2>
             <p class="lead">
