--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </p>
             <br />
             <section id="kommunikation">
-                <img src="img/kommunikation2.jpg" alt="kommunikation">
+                <img src="img/kommunikation2.jpg" alt="Stimmtherapie Graz">
             </section>
         </div>
     </div>
