Sprech- Sprachtherapie Graz

--- a/schwerpunkte.html
+++ b/schwerpunkte.html
@@ -118,7 +118,7 @@
             </p>
             <br />
             <section id="sprachverstaendnis">
-                <img src="img/sprachverstaendnis.jpg" alt="Sprachtherapie">
+                <img src="img/sprachverstaendnis.jpg" alt="Sprachtherapie Graz">
             </section>
         </div>
     </div>
@@ -162,7 +162,7 @@
             </p>
             <br />
             <section id="buchstaben">
-                <img src="img/buchstaben.jpg" alt="Sprechtherapie">
+                <img src="img/buchstaben.jpg" alt="Sprechtherapie Graz">
             </section>
         </div>
     </div>
