--- a/index.html
+++ b/index.html
@@ -113,18 +113,17 @@
                 In meinen logopädischen Praxen in Graz und Bruck/Mur
                 versuche ich eine möglichst vielfältige Therapie anzubieten.
                 Nähere Informationen zu meinen Tätigkeitsbereichen, und Antworten zu häufig
-                gestellten Fragen der Patienten erhalten Sie 
-                <a href="./schwerpunkte.html">hier</a>.
+                gestellten Fragen der Patienten erhalten Sie hier:
+                <a href="./schwerpunkte.html">logopädische Therapie</a>
             </p>
             <p class="lead">
                 Sollten Sie Bedarf an einer logopädischen Therapie in Graz, Bruck/Mur oder
-                Hausbesuchen in der Umgebung haben, können Sie mich gerne
-                <a href="./kontakt.html">hier</a>
-                kontaktieren.
+                Hausbesuchen in der Umgebung haben, können Sie mich gerne kontaktieren:
+                <a href="./kontakt.html">Logopädische Praxis Graz und Bruck/Mur</a>
             </p>
             <p class="lead">
-                Informationen bezüglich Therapiekosten und Terminvereinbarung finden Sie
-                <a href="./tarife.html">hier</a>.
+                Informationen bezüglich Therapiekosten und Terminvereinbarung finden Sie hier:
+                <a href="./tarife.html">Termine und Tarife für Logopädie in Graz</a>
             </p>
             <p class="lead">
                 Ich freue mich schon auf unsere Zusammenarbeit!
