Link- und Textänderungen

--- a/schwerpunkte.html
+++ b/schwerpunkte.html
@@ -135,7 +135,7 @@
                     nicht nur die Symptome zu behandeln, sondern die Ursache zu erkennen und zu beseitigen.
                     <br/><br />
                     <b>Ab wann ist eine logopädische Therapie notwendig?</b><br />
-                    Vom Alter her kann man hier keine genaue Aussage treffen. Beispielsweise benötigen auch wenige Wochen alte Säuglinge zum Teil eine logopädische Therapie (Fütterstörungen).
+                    Bezüglich des Alters kann man hier keine genaue Aussage treffen. Beispielsweise benötigen auch wenige Wochen alte Säuglinge zum Teil eine logopädische Therapie (Fütterstörungen).
                     Im Bereich der Sprachtherapie bei Kindern gilt: Je früher eine Verzögerung oder eine Störung der Sprachlichen Entwicklung entdeckt und therapiert wird desto schneller kann das Kind den Rückstand aufholen. 
                     Bei erwachsenen Patienten hängt die Notwendigkeit der Therapie auch oft davon ab, ob der Betroffene etwas ändern möchte oder nicht. 
                     <br/><br />
@@ -151,7 +151,7 @@
                     <br/><br />
                     <b>Wie teuer ist die Therapie?</b><br />
                     Allgemein orientieren sich die Preise für eine Therapie am vorgeschlagenen Stundensatz des Berufsverbandes Logopaedieaustria (Stand Juli 2019: 87,09/Stunde). 
-                    Meine Tarife finden Sie <a href="./tarife.html">hier</a>.
+                    Meine Tarife finden Sie hier: <a href="./tarife.html">Tarife mobile logopädische Praxis Graz und Bruck/Mur</a>
                     <br/><br />
                     <b>Wer übernimmt die Therapiekosten?</b><br />
                     In der Steiermark gibt es im freiberuflichen Bereich nur Wahllogopäden. Das bedeutet, dass je nach Krankenkasse ca. die Hälfte des anfallenden Betrags von der Krankenkasse übernommen wird. Der Restbetrag muss selbst übernommen werden.
