--- a/uebermich.html
+++ b/uebermich.html
@@ -24,9 +24,9 @@
         </section>
     </div>
     <div class="col-md-6 p-lg-3 mx-auto my-3">
-        <h1 class="display-3 font-weight-bold" id="title-logo">LOGO on TOUR</h1>
-        <h2>Helena Pernul, BSc, Ihre Wahllogopädin in Graz und Bruck/Mur</h2>
-        <h3 class="lead font-weight-normal" style="margin-top: 2em">Mobile Logopädie in Graz, Graz Umgebung, Bruck/Mur und Kapfenberg</h3>
+        <h1 class="display-3 font-weight-bold" id="title-logo">Logopädische Praxis in Graz</h1>
+        <h2>Ausgebildete Logopädin in Graz und Bruck/Mur</h2>
+        <h3 class="lead font-weight-normal" style="margin-top: 2em">Erfolgreiche Stimm- und Sprechterapie</h3>
     </div>
     <div class="product-device shadow-sm d-none d-md-block"></div>
     <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
