--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <link href="style.css" rel="stylesheet">
-    <title>LOGO on TOUR - mobile logopädische Praxis in Graz und Bruck/Mur</title>
+    <title>LOGO ON TOUR - mobile Logopädie Graz </title>
+    <meta name="description" content="Ihre Logopädie in Graz für Kinder und Erwachsene: Ich helfe
+        erfolgreich und einfühlsam bei Stimmstörungen, Sprechstörungen, Sprachstörungen und
+        Schluckstörungen. Kontaktieren Sie mich!"" />
+    <meta name="keywords" content="mobile Logopädie Graz, Stimmstörung
+        Hilfe Graz, Sprechstörung Hilfe Graz, Schluckstörung Hilfe Graz" />
+    <meta name="robots" content="index, follow" />
     
     <link rel="icon" type="image/png" href="img/logoicon.png">
 </head>
@@ -26,9 +32,9 @@
         </section>
     </div>
     <div class="col-md-6 p-lg-3 mx-auto my-3" id="centerheader">
-        <h1 class="display-3 font-weight-bold" id="title-logo">LOGO on TOUR</h1>
-        <h2 class="display-5">Helena Pernul, BSc, Ihre Wahllogopädin in Graz und Bruck/Mur</h2>
-        <h3 class="lead font-weight-normal" style="margin-top: 2em">Mobile Logopädie in Graz, Graz Umgebung, Bruck/Mur und Kapfenberg</h3>
+        <p class="display-3 font-weight-bold" id="title-logo">LOGO on TOUR</p>
+        <p class="lead font-weight-bold" id="title2">Helena Pernul, BSc, Ihre Wahllogopädin in Graz und Bruck/Mur</p>
+        <p class="lead font-weight-normal mb-0" id="title3">Mobile Logopädie in Graz, Graz Umgebung, Bruck/Mur und Kapfenberg</p>
     </div>
     
     <div class="product-device shadow-sm d-none d-md-block"></div>
@@ -42,16 +48,19 @@
     <div class="collapse navbar-collapse text-center" id="navbarNav">
         <ul class="navbar-nav text-center">
             <li class="nav-item">
-                <a class="nav-link" href="./index.html">LOGO on TOUR / Home</a>
+                <a class="nav-link" href="./index.html">LOGO on TOUR/Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="./uebermich.html">Über mich</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="./schwerpunkte.html">Therapiebereiche/FAQ</a>
+                <a class="nav-link" href="./schwerpunkte.html">Therapiebereiche</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="./tarife.html">Tarife und Terminvergabe</a>
+                <a class="nav-link" href="./faq.html">FAQ</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./tarife.html">Tarife/Terminvergabe</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="./kontakt.html">Kontakt</a>
@@ -67,17 +76,29 @@
             <p class="lead">
                 Ziel von LOGO on TOUR ist es, Ihnen und Ihren Lieben eine kompetente logopädische Therapie 
                     zu ermöglichen. Diese kann in den logopädischen Praxisräumen, aber auch in den eigenen vier 
-                    Wänden erfolgen.
-                    <a href="./uebermich.html" id="uebermichlink">Hier</a>
-                    können Sie Näheres über mich erfahren.
+                    Wänden erfolgen. 
             </p>
+            <p class="lead"> Als <a href="uebermich.html" id="uebermichlink2">ausgebildete Logopädin</a>
+                umfasst meine
+                <a href="schwerpunkte.html" id="kontaktlink2">Therapie für Stimm-, Sprach-, Sprech- und Schluckstörungen</a> 
+                folgende Bereiche:
+            </p>
+            <ul class="lead">
+                <li>Neurologische Sprach,- und Sprechstörungen</li>
+                <li>Störungen der mimischen Muskulatur</li>
+                <li>Stimmstörungen</li>
+                <li>Spracherwerbsstörungen</li>
+                <li>Schluckstörungen (Dysphagie) und Trachealkanülenmanagement</li>
+            </ul>
             <h2 class="display-5 mb-4 mt-5">Logopädie für Kinder und Erwachsene</h2>
             <p class="lead">
                 Sowohl im Bereich der logopädischen Therapie mit Kindern, als auch Erwachsenen 
-                oder betagten Personen stehe ich Ihnen gerne beratend und therapeutisch als Logopädin zur Seite.
+                oder betagten Personen stehe ich Ihnen gerne beratend und therapeutisch als
+                <a href="uebermich.html" id="uebermichlink3">ausgebildete Logopädin</a>
+                zur Seite.
                 <br />
                 <br />
-                Einsatzgebiete:
+                Meine logopädische Praxis:
             </p>
             <ul class="lead">
                 <li>Praxisräume in Graz</li>
@@ -90,13 +111,14 @@
             <br />      
             <br />
             <section id="logologo">
-                <img src="img/logologo.jpg" alt="Logopäde Hausbesuch Graz">
+                <img src="img/logopaedie_graz.jpg" alt="Logopädie Graz">
             </section>
         </div>
+
     </div>
     <div class="bg-light mr-md-3 pt-3 px-3 pt-md-4 px-md-5 col-md-6 text-center overflow-hidden" id="was">
         <div class="mb-3 pb-3">
-            <h1 class="display-5  mb-4">Logopädie, was ist das?</h1>
+            <h2 class="display-5  mb-4">Logopädie, was ist das?</h2>
             <p class="lead">Die Logopädie beschäftigt sich mit den Teilbereichen
                 Stimme, Sprechen, Sprache, Schlucken und Hören.
                 In den logopädischen Fachbereich fallen sowohl
@@ -109,6 +131,7 @@
                 Stimmstörungen im Erwachsenenalter und der Arbeit
                 mit Klienten mit neurologischen Störungen.
             </p>
+            <h2 class="display-5 mb-4 mt-5">Therapie-Angebot meiner logopädischen Praxis</h2>
             <p class="lead">
                 In meinen logopädischen Praxen in Graz und Bruck/Mur
                 versuche ich eine möglichst vielfältige Therapie anzubieten.
@@ -130,7 +153,7 @@
             </p>
             <br />
             <section id="kommunikation">
-                <img src="img/kommunikation2.jpg" alt="Stimmtherapie Graz">
+                <img src="img/logopaedische_praxis.jpg" alt="Logopädische Praxis">
             </section>
         </div>
     </div>
