--- a/tarife.html
+++ b/tarife.html
@@ -9,7 +9,15 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <link href="style.css" rel="stylesheet">
-    <title>LOGO on TOUR - Tarife und Terminvergabe</title>
+    <title>Logopädie: Kosten und Therapie</title>
+    <meta name="description" content="Sprachstörungen, Lesestörungen,
+        Schreibstörungen, Atemstörungen, Stimmstörungen, Lähmungen uvm. - Ich
+        helfe einfühlsam und professionell zu einer klaren Aussprache und
+        Erlernen von richtigem Schlucken, Sprechen, Schreiben und Lesen.
+        Rufen Sie mich für ein Erstgespräch und für Informationen der Kosten einer Therapie an" />
+    <meta name="keywords" content="Lesestörung bei Kind Hilfe,
+        Schreibstörung Kind Hilfe, Atemstörung Kind Hilfe" />
+    <meta name="robots" content="index, follow" />
     
     <link rel="icon" type="image/png" href="img/logoicon.png">
 </head>
@@ -24,9 +32,9 @@
         </section>
     </div>
     <div class="col-md-6 p-lg-3 mx-auto my-3">
-        <h1 class="display-3 font-weight-bold" id="title-logo">LOGO on TOUR</h1>
-        <h2>Helena Pernul, BSc, Ihre Wahllogopädin in Graz und Bruck/Mur</h2>
-        <h3 class="lead font-weight-normal" style="margin-top: 2em">Mobile Logopädie in Graz, Graz Umgebung, Bruck/Mur und Kapfenberg</h3>
+        <p class="display-3 font-weight-bold" id="title-logo">LOGO on TOUR</p>
+        <p class="font-weight-bold" id="title2">Helena Pernul, BSc, Ihre Wahllogopädin in Graz und Bruck/Mur</p>
+        <p class="lead font-weight-normal mb-0" id="title3">Mobile Logopädie in Graz, Graz Umgebung, Bruck/Mur und Kapfenberg</p>
     </div>
     <div class="product-device shadow-sm d-none d-md-block"></div>
     <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
@@ -37,42 +45,50 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse text-center" id="navbarNav">
-        <ul class="navbar-nav text-center">
-            <li class="nav-item">
-                <a class="nav-link" href="./index.html">LOGO on TOUR / Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./uebermich.html">Über mich</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./schwerpunkte.html">Therapiebereiche/FAQ</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./tarife.html">Tarife und Terminvergabe</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./kontakt.html">Kontakt</a>
-            </li>
-        </ul>
+            <ul class="navbar-nav text-center">
+                    <li class="nav-item">
+                        <a class="nav-link" href="./index.html">LOGO on TOUR/Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./uebermich.html">Über mich</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./schwerpunkte.html">Therapiebereiche</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./faq.html">FAQ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./tarife.html">Tarife/Terminvergabe</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./kontakt.html">Kontakt</a>
+                    </li>
+                </ul>
     </div>
 </nav>
 
 <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
     <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-4 px-md-5 col-md-6 text-center text-white overflow-hidden" id="tarif">
         <div class="mb-3 pb-3">
-            <h1 class="display-5 mb-4">Logopädische Praxis - Tarife</h1>
-            <p class="lead">Die Tarife orientieren sich an den Tarifvorschlägen
-                des Verbandes „logopädieaustria“:</p>
+            <h1 class="display-5 mb-4">Logopädie in Graz und Bruck/Mur: Kosten und Tarife</h1>
+            <p class="lead">Meine Tarife und Kosten richten sich nach der zeitlichen Dauer der Stimm-, Sprach-, Sprech- bzw.
+                Schlucktherapie. Dabei orientieren sich die Tarife  an den Tarifvorschlägen
+                des Verbandes „logopädieaustria“. Dazu biete ich folgende Möglichkeiten:</p>
             <ul class="lead">
                 <li>30 Minuten 40€</li>
                 <li>45 Minuten 60€</li>
                 <li>60 Minuten 80€</li>
             </ul>
             <br>
-            <p class="lead">Wahllogopädin für alle Kassen, je nach Krankenkasse wird ein bestimmter Anteil 
-                    des Betrages rückerstattet (Zuweisung und Zahlungsbestätigung sowie Befund sind Voraussetzung).</p>
+            <p class="lead">Ich bin eine Wahllogopädin für alle Kassen. Je nach Krankenkasse wird ein bestimmter Anteil des
+                    Betrages rückerstattet (Zuweisung und Zahlungsbestätigung sowie Befund sind
+                    Voraussetzung). Weitere Informationen und Antworten auf mögliche Fragen zu meinem
+                    <a href="schwerpunkte.html" id="logoangebot">logopädischen Angebot</a> finden Sie in den
+                    <a href="faq.html" id="faqangebot">FAQ‘s für meine Logopädie</a>.
+            </p>
             
-            <h2 class="display-5 mb-4 mt-5">Mobile logopädische Praxis</h2>
+            <h2 class="display-5 mb-4 mt-5">Kosten für die mobile logopädische Praxis</h2>
             <p class="lead">Zuzüglich wird ein amtliches Kilometergeld von 0,42 €/km ausgehend 
                 von den Praxen in Graz bzw. Bruck an der Mur verrechnet.</p>
             <br>
@@ -81,8 +97,9 @@
     </div>
     <div class="bg-light mr-md-3 pt-3 px-3 pt-md-4 px-md-5 col-md-6 text-center overflow-hidden" id="termine">
         <div class="mb-3 pb-3">
-            <h1 class="display-5  mb-4">Terminvergabe für die logopädische Therapie</h1>
-            <p class="lead">Die Terminvergabe erfolgt telefonisch unter: 0660/4867242</p>
+            <h2 class="display-5  mb-4">Terminvergabe für die logopädische Therapie</h2>
+            <p class="lead">Prinzipiell kann ich sehr schnell Termine vergeben und es gibt kurze Wartezeiten.</p>
+            <p class="lead">Die Terminvergabe erfolgt telefonisch unter: <a href="tel:+436604867242">0660/4867242</a></p>
             <br>
             <p class="lead">Termine nach Vereinbarung:</p>
             <ul class="lead">
