--- a/uebermich.html
+++ b/uebermich.html
@@ -9,7 +9,15 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <link href="style.css" rel="stylesheet">
-    <title>LOGO on TOUR - Helena Pernul</title>
+    <title>Logopädin in Graz bei Sprechproblemen</title>
+
+    <meta name="description" content="Kompetente und professionelle
+        Logopädin für Kinder und Erwachsende: Stimmtherapie und Sprachtherapie
+        mit Erfolg für eine klare Aussprache. Ich stehe für qualitative
+        Sprachförderung: Kontaktieren Sie mich!" />
+    <meta name="keywords" content="mobile Logopädin Graz, logopädische Praxis Graz, Sprachtherapie Kinder, mobile
+        Sprachtherapie Erwachsene" />
+    <meta name="robots" content="index, follow" />
     
     <link rel="icon" type="image/png" href="img/logoicon.png">
 </head>
@@ -24,9 +32,9 @@
         </section>
     </div>
     <div class="col-md-6 p-lg-3 mx-auto my-3">
-        <h1 class="display-3 font-weight-bold" id="title-logo">Logopädische Praxis in Graz</h1>
-        <h2>Ausgebildete Logopädin in Graz und Bruck/Mur</h2>
-        <h3 class="lead font-weight-normal" style="margin-top: 2em">Erfolgreiche Stimm- und Sprechterapie</h3>
+        <p class="display-3 font-weight-bold" id="title-logo">LOGO on TOUR</p>
+        <p class="lead font-weight-bold" id="title2">Helena Pernul, BSc, Ihre Wahllogopädin in Graz und Bruck/Mur</p>
+        <p class="lead font-weight-normal mb-0" id="title3">Mobile Logopädie in Graz, Graz Umgebung, Bruck/Mur und Kapfenberg</p>
     </div>
     <div class="product-device shadow-sm d-none d-md-block"></div>
     <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
@@ -39,16 +47,19 @@
     <div class="collapse navbar-collapse text-center" id="navbarNav">
         <ul class="navbar-nav text-center">
             <li class="nav-item">
-                <a class="nav-link" href="./index.html">LOGO on TOUR / Home</a>
+                <a class="nav-link" href="./index.html">LOGO on TOUR/Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="./uebermich.html">Über mich</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="./schwerpunkte.html">Therapiebereiche/FAQ</a>
+                <a class="nav-link" href="./schwerpunkte.html">Therapiebereiche</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="./tarife.html">Tarife und Terminvergabe</a>
+                <a class="nav-link" href="./faq.html">FAQ</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./tarife.html">Tarife/Terminvergabe</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="./kontakt.html">Kontakt</a>
@@ -60,16 +71,19 @@
 <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
     <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-4 px-md-5 col-md-6 text-center text-white overflow-hidden" id="about">
         <div class="mb-3 pb-3">
-            <h1 class="display-5 mb-4">Ihre mobile Logopädin aus Graz</h1>
-            <p class="lead">Seit 2017 bin ich vor allem im neurologischen Bereich tätig.
-                Hier konnte ich sowohl im Bereich der Stimm- und Sprechtherapie als auch 
-                im Bereich der Sprach- und Schlucktherapie Erfahrungen sammeln.
-            </p>
+            <h1 class="display-5 mb-4">Ausgebildete Logopädin in Graz und Umgebung</h1>
+            <p class="lead">Nach meinem erfolgreich abgeschlossenen Studium für Logopädie arbeite ich seit 2017 als
+                    mobile Logopädin für Stimm-, Sprech-, Sprach- und Schlucktherapie.</p>
             <br />
             <section id="profil">
-                <img src="img/helena_bild.jpg" alt="Logopäde Graz">
+                <img src="img/mobile_logopaedin_graz.jpg" alt="Logopäde Graz">
             </section>
-            <h2 class="display-5 mb-4 mt-3">Über mich</h2>
+            <h2 class="display-5 mb-4 mt-4">Ihre mobile Logopädin aus Graz</h2>
+            <p class="lead">Seit 2017 bin ich vor allem im <a href="schwerpunkte.html" id="tariflink">neurologischen Logopädie-Bereich</a> tätig.
+                Hier konnte ich in allen oben genannten Bereichen, also der Stimm-, Sprech-, Sprach- 
+                und Schlucktherapie viele Erfahrungen sammeln.
+            </p>
+            <h2 class="display-5 mb-4 mt-5">Logopädin Helena Pernul: Über mich</h2>
             <p class="lead">Mein Name ist Helena Pernul. Ich stamme aus
                 Hermagor in Kärnten. Im Jahr 2016 habe ich nach
                 dreijährigem Studium meine Ausbildung zur
@@ -85,12 +99,20 @@
                 Mein Antrieb zur Gründung eines mobilen logopädischen Dienstes war 
                 es, auch immobilen Personen einen Zugang zur Logopädie zu ermöglichen.
             </p>
+            <p class="lead">
+                    <a href="./kontakt.html" id="kontaktlink">Kontaktieren Sie mich</a>, ich freue mich auf Sie!
+            </p>
         </div>
         
     </div>
     <div class="bg-light mr-md-3 pt-3 px-3 pt-md-4 px-md-5 col-md-6 text-center overflow-hidden" id="fortbildungen">
         <div class="mb-3 pb-3">
-            <h1 class="display-5 mb-4">Fortbildungen</h1>
+            <h2 class="display-5 mb-4">Meine Ausbildungen und Fortbildungen als Logopädin</h2>
+            <p class="lead">Die <a href="https://www.fh-kaernten.at/unser-studienangebot/gesundheit-soziales/ueberblick/gesundheit-soziales/bachelor/logopaedie/studium-logopaedie/">Ausbildung zur Logopädin</a>
+                habe ich an der Fachhochschule Kärnten in Klagenfurt
+                abgeschlossen.
+            </p>
+            <p class="lead">Folgende Fortbildungen habe ich absolviert:</p>
             <ul class="lead">
                 <li>Ausspracheprüfung für die Praxis (APP) </li>
                 <li>Fortbildung zum Tracheostoma-Berater</li>
